--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Montserrat:wght@400;600&family=Palanquin+Dark:wght@700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -294,11 +295,21 @@
         <p>+51 987 654 321</p>
         <p><a href="mailto:contacto@munay.pe">contacto@munay.pe</a></p>
       </div>
+
+      <div class="footer-social">
+        <h4>Síguenos</h4>
+        <div class="social-icons">
+          <a href="URL-FACEBOOK" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="URL-INSTAGRAM" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="URL-LINKEDIN" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      
     </div>
     <div class="footer-copy">
       <p>© 2025 Munay | Desarrollado por Emanuel Abner Rodriguez Baltazar</p>
     </div>
-  </footer>
+</footer>
 
   <script src="javascript.js"></script>
 </body>
